blockml/test/errors/01_yaml/e6/e6.view
view: e6
table: 1
kfs:        #if parameters are specified, they can not have undefined values
